--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "redux-state-sync": "^3.1.4",
     "resend": "^6.1.3",
     "set-interval-async": "^3.0.3",
+    "short-unique-id": "^5.3.2",
     "simple-crypto-js": "^3.0.1",
     "simple-react-validator": "^1.6.2",
     "simple-xml-to-json": "^1.2.3",
