register and forgotpassword changes

--- a/.env
+++ b/.env
@@ -12,6 +12,9 @@ VITE_SUPABASE_URL='https://gweikvxgqoptvyqiljhp.supabase.co'
 
 VITE_TOKEN_KEY = 'SAN4355'
 
+#VITE_MARRYLOCAL_URL = 'https://marrylocal.in'
+VITE_MARRYLOCAL_URL = 'http://localhost:5173/'
+
 
 
 
