--- a/.env
+++ b/.env
@@ -15,6 +15,6 @@ VITE_TOKEN_KEY = 'SAN4355'
 #VITE_MARRYLOCAL_URL = 'https://marrylocal.in'
 VITE_MARRYLOCAL_URL = 'http://localhost:5173/'
 
-
+VITE_MAINTENANCE_MODE = false
 
 
