--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
+    "workbox-window": "^7.4.0",
     "yup": "^1.7.1",
     "zod": "^4.1.12"
   },
