--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "preview": "vite preview",
-    "deploy": "npm run build && wrangler pages deploy dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -90,7 +89,6 @@
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
     "tw-animate-css": "^1.4.0",
-    "vite": "^7.1.7",
-    "wrangler": "^4.59.1"
+    "vite": "^7.1.7"
   }
 }
