--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tanstack/react-query": "^5.90.5",
     "@types/leaflet": "^1.9.21",
     "axios": "^1.12.2",
+    "check-guid": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
