--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node -e \"const fs = require('fs'); const meta = { version: Date.now().toString() }; fs.writeFileSync('public/meta.json', JSON.stringify(meta, null, 2)); const headers = '# Cache control for assets to prevent stale chunks\\n/assets/*\\n  Cache-Control: no-cache, no-store, must-revalidate\\n  Pragma: no-cache\\n  Expires: 0\\n\\n# Allow meta.json to be fetched fresh\\n/meta.json\\n  Cache-Control: no-cache, no-store, must-revalidate\\n  Pragma: no-cache\\n  Expires: 0\\n\\n# Service worker should not be cached\\n/sw.js\\n  Cache-Control: no-cache, no-store, must-revalidate\\n  Pragma: no-cache\\n  Expires: 0'; fs.writeFileSync('public/_headers', headers);\" && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@koale/useworker": "^4.1.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -39,7 +38,6 @@
     "@tanstack/react-query": "^5.90.5",
     "@types/leaflet": "^1.9.21",
     "axios": "^1.12.2",
-    "check-guid": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
@@ -76,6 +74,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
+    "workbox-window": "^7.4.0",
     "yup": "^1.7.1",
     "zod": "^4.1.12"
   },
@@ -90,6 +89,7 @@
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
     "tw-animate-css": "^1.4.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "wrangler": "^4.59.1"
   }
 }
